Added CS classwork with early descriptions.

--- a/resume.html
+++ b/resume.html
@@ -45,8 +45,9 @@
             <h1>Experience</h1>
             <!--relevant work history and/or leadership/volunteering experiences with
                 a title and a short one-paragraph synopsis per item -->
-            <ul style="list-style-type: none">
-                <li><h4>Undergradate Research Scholar</h4>
+            <ul class="resume-lists">
+                <li>
+                    <h4>Undergradate Research Scholar</h4>
                     <ul>
                         <li>Collaborated with 2 professors and a fellow student to implement replacement policies into a
                             pre-existing Java codebase, then analyzed the efficiency of the policies</li>
@@ -55,17 +56,20 @@
                             respective faculty advisors in program</li>
                     </ul>
                 </li>
-                <li><h4>Computer Science Subject Tutor</h4>
+                <li>
+                    <h4>Computer Science Subject Tutor</h4>
                     <ul>
                         <li>Helped students with a variety of learning and communication styles with concepts and
                             reasoning in introductory and intermediate computer science courses</li>
                     </ul>
                 </li>
-                <li><h4>Wild Waves Theme & Water Park Systems Supervisor</h4>
+                <li>
+                    <h4>Wild Waves Theme & Water Park Systems Supervisor</h4>
                     <ul>
                         <li>Primary on-site IT supervisor at the park</li>
-                        <li>Responsible for the installation, upkeep, and maintainance of all the systems and software used in the park, including the ParkPOS, locker, 
-                        and ticket scanners</li>
+                        <li>Responsible for the installation, upkeep, and maintainance of all the systems and software
+                            used in the park, including the ParkPOS, locker,
+                            and ticket scanners</li>
                         <li>Responsible for maintaining the park network and servers</li>
                     </ul>
                 </li>
@@ -77,6 +81,42 @@
             <h1>Coursework</h1>
             <!--List of CS and CS-adjacent (such as Math) courses here. 
                 Use an unordered list containing course number and course title.-->
+            <ul class="resume-lists">
+                <li><h4>CS 161: Intro to Computer Science</h4>
+                    <p>This course is an introduction to computer science and programming. The programming language Java is used to illustrate concepts in computer science. The course emphasizes the use of the computer as a problem-solving tool and the development of good programming style. CSCI 161 is the introductory course for students planning to major or minor in computer science.</p>
+                </li>
+                <li><h4>CS 261: Computer Science II</h4>
+                    <p>This course is a continuation of CSCI 161. It provides an introduction to the study of fundamental data structures and their associated algorithms. Students learn how to choose appropriate data structures and algorithms for particular problems. They learn about lists, stacks, queues, trees, sorting, searching, abstract data types, and object-oriented programming using an object-oriented programming language. A weekly laboratory is required.</p>
+                </li>
+                <li><h4>CS 281: Assembly Language and Computer Architecture</h4>
+                    <p>Introduction to machine organization, machine structure, data representation, digital logic, and assembly language programming on a RISC based architecture.</p>
+                </li>
+                <li><h4>CS 291: Programming Language Paradigms</h4>
+                    <p>Declarative programming languages are an important alternative to languages (such as C, C++, and Java) that use the more familiar imperative programming paradigm. This course introduces the functional, dataflow, and logic programming paradigms in depth through assignments in the programming languages Haskell and Prolog. These languages are based on models of computation that are fundamentally different from the von Neumann model underlying imperative programming languages, and exposure to these new paradigms provides valuable perspective on programming and problem solving in general.</p>
+                </li>
+                <li><h4>CS 315: Computer Graphics</h4>
+                    <p>This course is an introduction to the process of generating images with a computer. The emphasis is on the design and use of graphical facilities for two- and three-dimensional graphics. Students study the mathematical theory underlying computer generated graphics, and will implement programs utilizing these techniques. The mathematical topics covered include rotations, translations, and perspective. The core pieces of the graphics pipeline used in current graphics hardware are studied.</p>
+                </li>
+                <li><h4>CS 475: Operating Systems</h4>
+                    <p>One the most complex software systems ever assembled, the modern operating system serves as the interface between the human and the machine. This course traces how the simple idea of ``resource sharing'' unravels into some of the most confounding problems and original breakthroughs in computer science. Course topics include process and thread management, input/output, CPU scheduling, synchronization primitives, memory management, and file systems. Students taking this course learn how to deal with the intricacies of low-level programming, parallel computing and synchronization problems, and also receive kernel-development experience through the design and implementation of various subsystems in a real operating system. The C programming language is used for homework assignments and projects.</p>
+                </li>
+                <li><h4>CS 361: Algorithms and Data Structures</h4>
+                    <p>This is a course in advanced data structures, the algorithms needed to manipulate these data structures, proofs that the algorithms are correct, and a runtime analysis of the algorithms. Students study advanced data structures such as Red-Black Trees, 2-3 Trees, Heaps, and Graphs. Students also study algorithm design techniques including Greedy Algorithms, Divide and Conquer, Dynamic Programming, and Backtracking. They also learn about NP-Complete problems.</p>
+                </li>
+                <li><h4>CS 431: Intro to Artificial Intelligence</h4>
+                    <p>This course introduces the student to the techniques of artificial intelligence. Students learn strategies for uninformed and informed (heuristic) search, knowledge representation, problem-solving, and machine learning. Additional topics may include motion planning, probabilistic reasoning, natural language understanding, and philosophical implications.</p>
+                </li>
+                <li><h4>CS 240: Software Engineering</h4>
+                    <p>Students study the design and implementation of large software systems. Topics include design methodologies, programming team organization, and management, program verification and maintenance, design patterns and software engineering tools.</p>
+                </li>
+                <li><h4>CS 425: Natural Language Processing</h4>
+                    <p>Course details</p>
+                </li>
+                <li><h4>CS 455: Principles of Database Systems</h4>
+                    <p>The management of data is one of the classical problems throughout the history of computing. This course centers around the fundamental concepts and theory that underpin the relational data model, which addresses numerous problems that plague data management, including data independence, consistency, information loss, and access performance. Course topics include the relational data model, database languages (e.g., SQL), relational database theory, database design (by decomposition), query execution, and considerations that affect system performance. Students design database schemas that effectively model an organization's information requirements and write programs that require database integration. Students also gain insight through the analysis and implementation of influential data structures and algorithms that are commonly used in modern relational database systems.</p>
+                </li>
+                </li>
+            </ul>
         </section>
 
         <!-- Technical -->
@@ -84,6 +124,13 @@
             <h1>Technical</h1>
             <!--List any significant technical projects here. 
                 A title and short one-paragraph synopsis per project will be sufficient. -->
+            <ul class="resume-lists">
+                <li>
+                    <h4></h4>
+                    <p>Implemented key components in C in a real OS kernel, including a ready queue, a robust CPU
+                        scheduler, synchronization mechanisms, and deadlock detection & recovery</p>
+                </li>
+            </ul>
         </section>
 
         <!-- Affiliations -->
@@ -93,7 +140,10 @@
             <ul>
                 <li>
                     <h4>Cross Country and Track & Field</h4>
-                    <p>I run cross country and track & field at the collegiate level. </p>
+                    <li>Facilitate communication between fellow athletes and coaches as a team captain</li>
+                    <li>2020 Indoor All-American, 2019 Cross Country All-Academic, 4-time National Qualifier, 4
+                        Northwest Conference Titles, 2018 Harry Herbisky Award for Scholarship, Skill and
+                        Determination</li>
                 </li>
             </ul>
         </section>
