finalized descriptions of coursework items in resume.html

--- a/resume.html
+++ b/resume.html
@@ -83,37 +83,76 @@
                 Use an unordered list containing course number and course title.-->
             <ul class="resume-lists">
                 <li><h4>CS 161: Intro to Computer Science</h4>
-                    <p>This course is an introduction to computer science and programming. The programming language Java is used to illustrate concepts in computer science. The course emphasizes the use of the computer as a problem-solving tool and the development of good programming style. CSCI 161 is the introductory course for students planning to major or minor in computer science.</p>
+                    <p>This course was an introduction to computer science and programming. 
+                     The programming language Java was used to illustrate object-oriented programming and other concepts. 
+                     The course emphasized the use of the computer as a problem-solving tool and the development of good programming style.</p>
                 </li>
                 <li><h4>CS 261: Computer Science II</h4>
-                    <p>This course is a continuation of CSCI 161. It provides an introduction to the study of fundamental data structures and their associated algorithms. Students learn how to choose appropriate data structures and algorithms for particular problems. They learn about lists, stacks, queues, trees, sorting, searching, abstract data types, and object-oriented programming using an object-oriented programming language. A weekly laboratory is required.</p>
+                    <p>This course was a continuation of CSCI 161. It provided an introduction to the study of fundamental data structures
+                        and their associated algorithms. We learned how to choose appropriate data structures and algorithms for particular 
+                        problems. The course covered the concepts of lists, stacks, queues, trees, sorting, searching, abstract 
+                        data types, and object-oriented programming using an object-oriented programming language.</p>
                 </li>
                 <li><h4>CS 281: Assembly Language and Computer Architecture</h4>
-                    <p>Introduction to machine organization, machine structure, data representation, digital logic, and assembly language programming on a RISC based architecture.</p>
+                    <p>This course was our introduction to machine organization, machine structure, 
+                        data representation, digital logic, and assembly language programming on a RISC based architecture.</p>
                 </li>
                 <li><h4>CS 291: Programming Language Paradigms</h4>
-                    <p>Declarative programming languages are an important alternative to languages (such as C, C++, and Java) that use the more familiar imperative programming paradigm. This course introduces the functional, dataflow, and logic programming paradigms in depth through assignments in the programming languages Haskell and Prolog. These languages are based on models of computation that are fundamentally different from the von Neumann model underlying imperative programming languages, and exposure to these new paradigms provides valuable perspective on programming and problem solving in general.</p>
+                    <p>This course introduced the declarative, functional, dataflow, and logic programming paradigms in depth 
+                        through assignments in the programming languages Haskell and Prolog. 
+                        Exposure to languages are fundamentally different from 
+                        the von Neumann model underlying imperative programming languages provided valuable 
+                        perspective on programming and problem solving in general.</p>
                 </li>
                 <li><h4>CS 315: Computer Graphics</h4>
-                    <p>This course is an introduction to the process of generating images with a computer. The emphasis is on the design and use of graphical facilities for two- and three-dimensional graphics. Students study the mathematical theory underlying computer generated graphics, and will implement programs utilizing these techniques. The mathematical topics covered include rotations, translations, and perspective. The core pieces of the graphics pipeline used in current graphics hardware are studied.</p>
+                    <p>This course was an introduction to the process of generating images with a computer. 
+                        The emphasis was on the design and use of graphical facilities for two- and three-dimensional graphics. 
+                        We reviewed the calculus and linear algebra underlying computer generated graphics, and implemented programs 
+                        utilizing these techniques. The mathematical topics covered include rotations, translations, and perspective. 
+                        The core pieces of the graphics pipeline used in current graphics hardware are studied.</p>
                 </li>
                 <li><h4>CS 475: Operating Systems</h4>
-                    <p>One the most complex software systems ever assembled, the modern operating system serves as the interface between the human and the machine. This course traces how the simple idea of ``resource sharing'' unravels into some of the most confounding problems and original breakthroughs in computer science. Course topics include process and thread management, input/output, CPU scheduling, synchronization primitives, memory management, and file systems. Students taking this course learn how to deal with the intricacies of low-level programming, parallel computing and synchronization problems, and also receive kernel-development experience through the design and implementation of various subsystems in a real operating system. The C programming language is used for homework assignments and projects.</p>
+                    <p>This course traceed how the simple idea of "resource sharing" unravels into some of the most 
+                        confounding problems and original breakthroughs in computer science. Course topics included 
+                        process and thread management, input/output, CPU scheduling, synchronization primitives, 
+                        memory management, and file systems. We learned how to deal with the intricacies of low-level
+                        programming, parallel computing and synchronization problems, and also received kernel-development
+                        experience through the design and implementation of various subsystems in a real operating system. 
+                        The C programming language was used in this course for assignments and projects.</p>
                 </li>
                 <li><h4>CS 361: Algorithms and Data Structures</h4>
-                    <p>This is a course in advanced data structures, the algorithms needed to manipulate these data structures, proofs that the algorithms are correct, and a runtime analysis of the algorithms. Students study advanced data structures such as Red-Black Trees, 2-3 Trees, Heaps, and Graphs. Students also study algorithm design techniques including Greedy Algorithms, Divide and Conquer, Dynamic Programming, and Backtracking. They also learn about NP-Complete problems.</p>
+                    <p>This course explored advanced data structures, the algorithms needed to manipulate these
+                         data structures, proofs that the algorithms are correct, and a runtime analysis of the algorithms. 
+                         We studied advanced data structures such as Rede-Black rees, 2-3 Trees, Heaps, and Graphs. 
+                         Additionally, we studied algorithm design techniques including Greedy Algorithms, 
+                         Divide and Conquer, Dynamic Programming, Backtracking, and the NP-Complete problem.</p>
                 </li>
                 <li><h4>CS 431: Intro to Artificial Intelligence</h4>
-                    <p>This course introduces the student to the techniques of artificial intelligence. Students learn strategies for uninformed and informed (heuristic) search, knowledge representation, problem-solving, and machine learning. Additional topics may include motion planning, probabilistic reasoning, natural language understanding, and philosophical implications.</p>
+                    <p>This course introduced the student to the techniques of artificial intelligence. 
+                        Students learned strategies for uninformed and informed (heuristic) searches, 
+                        knowledge representation, problem-solving, and machine learning. Additional topics included 
+                        probabilistic reasoning, and philosophical implications.</p>
                 </li>
                 <li><h4>CS 240: Software Engineering</h4>
-                    <p>Students study the design and implementation of large software systems. Topics include design methodologies, programming team organization, and management, program verification and maintenance, design patterns and software engineering tools.</p>
+                    <p>This course introduces us to the design and implementation of large software systems. 
+                        Topics included design methodologies, programming team organization, and management, 
+                        program verification and maintenance, design patterns and software engineering tools.</p>
                 </li>
                 <li><h4>CS 425: Natural Language Processing</h4>
-                    <p>Course details</p>
+                    <p>This is a special projects course in artificial intelligence with an emphasis on natural language processing. 
+                        This includes both understanding and generating text. The purpose of this course is to familiarize students 
+                        with the algorithms and techniques commonly used in the field of natural language processing and to 
+                        provide hands-on practice building an NLP system that can play (and hopefully complete) a text-based game.</p>
                 </li>
                 <li><h4>CS 455: Principles of Database Systems</h4>
-                    <p>The management of data is one of the classical problems throughout the history of computing. This course centers around the fundamental concepts and theory that underpin the relational data model, which addresses numerous problems that plague data management, including data independence, consistency, information loss, and access performance. Course topics include the relational data model, database languages (e.g., SQL), relational database theory, database design (by decomposition), query execution, and considerations that affect system performance. Students design database schemas that effectively model an organization's information requirements and write programs that require database integration. Students also gain insight through the analysis and implementation of influential data structures and algorithms that are commonly used in modern relational database systems.</p>
+                    <p>This course centers around the fundamental concepts and theory that underpin the relational 
+                        data model, which addresses numerous problems that plague data management, including 
+                        data independence, consistency, information loss, and access performance. 
+                        Course topics include the relational data model, database languages (e.g., SQL), 
+                        relational database theory, database design (by decomposition), query execution, 
+                        and considerations that affect system performance. 
+                        During this course we will design database schemas that effectively model an organization's 
+                        information requirements and write programs that require database integration.</p>
                 </li>
                 </li>
             </ul>
