Created footer-items for the footer in index.html and default.css

--- a/index.html
+++ b/index.html
@@ -42,7 +42,10 @@
 
     <footer class="footer">
         <!-- Contact -->
+        <div class='footer-item footer-one'></div>
         <!-- Resume -->
+        <div class='footer-item footer-two'></div>
+        <div class='footer-item footer-three'></div>
 
     </footer>
 </body>
