Added Contact info in the footer of index.html

--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
 
     <div class="page">
         <!-- About -->
+        <h1>About Me:</h1>
         <section class="info-grid-container" id="about">
             <div class="info-grid">
                 <!-- Profile picture -->
@@ -41,10 +42,22 @@
     </div>
 
     <footer class="footer">
-        <!-- Contact -->
-        <div class='footer-item footer-one'></div>
-        <!-- Resume -->
+        <!-- Contact, LinkedIn, and Resume -->
+        <div class='footer-item footer-one'>
+            <h3>Contact Info</h3>
+            <p>
+                (253) 380-6029
+                <br>cleemonaghan@gmail.com
+                <br><a href="https://www.linkedin.com/in/colinlmonaghan/">LinkedIn</a>
+                <br><a href="resume.html">Resume</a>
+            </p>
+
+        </div>
+
+        <!-- Empty box -->
         <div class='footer-item footer-two'></div>
+        
+        <!-- Resume -->
         <div class='footer-item footer-three'></div>
 
     </footer>
